--- a/site2.html
+++ b/site2.html
@@ -24,6 +24,19 @@
 </header>
 
 <body>
+    <div>
+    <div class='post'>
+        <img decoding="async" height="230" src="https://i/cc/postimg.cc/QxfCP5bJ/2023-06-24-22-43-17/png"
+    alt="Card image cap">
+    <div>
+        <h3>Практическая работа 1.</h3>
+        <p>
+        Практическая работа, направленная на изчение основных тегов html, изучение таблицы стилей и применение ее к исполняемому файлу данной разметки
+        </p>
+        <h5 calss="post-info">Дата 24.01.2025</h5>
+
+
+    </div>
 </body>
 
 <footer> <!-- Оформляем подвал сайта -->
