--- a/praktika1.html
+++ b/praktika1.html
@@ -1,15 +1,15 @@
 <html>
 <head>
+    <link rel='stylesheet' href='siteCSS.css'>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-	<title> site </title>
-	<link rel='stylesheet' href='site.css'>
+	<title> practic 1 </title>
 </head>
 <header>
 	<nav id = 'menu1'>
 		<ul class='menu-main'>
-			<li> <a href='#' class='current'> главная </a></li>
+			<li> <a href='siteHTML.html' class='current'> главная </a></li>
 			<li> <a href='#'> об авторе </a></li>
-			<li> <a href='#'> милота </a>
+			<li> <a href='#'> Животные </a>
 				<ul>
 					<li> <a href='+%D0%BF%D1%83%D1%88%D0%B8%D1%81%D1%82%D1%8B%D0%B5&udm=2&fbs=AEQNm0DDgaHKHmgQPgdfMPlZgxGLktch0PpVIwMIGICNm1smYaTuM3mndJP7y9gaCgUqrTG0pwiYgjqdcxVig90A6Hoh5Xoj4P6fcw1RQKSSMIZkwTJMhttps://www.google.com/search?sca_esv=314d744163236d97&rlz=1C1GCEU_ruRU1145RU1145&sxsrf=ADLYWIL3l_DHPBPeAjOcoYNuoxOtzUoyDA:1737609775388&q=%D0%BA%D0%BE%D1%88%D0%BA%D0%B89cGCSkesEIvTOQn1pyBIv3vQ710FZlk0XBstARDDO_WdZlNeLVh7_ixXfNTw60bsNrLVdFv1MdFtttjWLvJBULSdrrzDpLSJPqwSVS51OHqb4SwXFuJAhSqmXSTVhQo-oDM&sa=X&ved=2ahUKEwj8ga7rjIuLAxViFhAIHYCmF7oQtKgLegQIHBAB&biw=1920&bih=953&dpr=1'> котики </a></li>
 					<li> <a href='#'> Хомячки </a></li>
@@ -22,22 +22,51 @@
 		</ul>
 	</nav>
 </header>
+<div> <h1> Задание 1 </h1>
+    <center><h1> Romeo and Juliet</h1></center>
+    <h4>ACT 1</h4>
+    <h4>PROLOGUE</h4>
+    <p>Two households, both alike in dignity,<br> In fair Verona, where we lay our scene,<br> From ancient grudge break to new mutiny,<br> Where civil blood makes civil hands unclean.<br>
+From forth the fatal loins of these two foes<br> A pair of star-cross'd lovers take their life;<br>
+Whose misadventured piteous overthrows<br>
+Do with their death bury their parents' strife.<br>
+The fearful passage of their death-mark'd love,<br> And the continuance of their parents' rage,<br> Which, but their children's end, nought could remove,<br>
+Is now the two hours' traffic of our stage;<br>
+The which if you with patient ears attend,<br> What here shall miss, our toil shall strive to mend.</p>
+    <h4> SCENE I. Verona. A public place </h4>
+    <p class="text">  Enter SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers</p>
+    <h4> SAMPSON  </h4>
+    <p>Gregory, o' my word, we'll not carry coals.</p>
+    <h4>GREGORY</h4>
+    <p>No, for then we should be colliers.</p>
 
-<body>
-    <div>
-    <div class='post'>
-        <img decoding="async" height="230" src="https://i/cc/postimg.cc/QxfCP5bJ/2023-06-24-22-43-17/png"
-    alt="Card image cap">
-    <div>
-        <h3>Практическая работа 1.</h3>
-        <p>
-        Практическая работа, направленная на изчение основных тегов html, изучение таблицы стилей и применение ее к исполняемому файлу данной разметки
-        </p>
-        <h5 calss="post-info">Дата 24.01.2025</h5>
+</div>
+
+<div> <h1> Задание 2 </h1>
+    <h3>Player1</h3>
+    <ul style="display:flex" >
+        <li class="card2">2♣</li>
+        <li class="card">9♥</li>
+        <li class="card">6♥</li>
+        <li class="card">A♦</li>
+        <li class="card2">Q♠</li>
+        <li class="card2">J♣</li>
+
+    </ul>
+    <h3>Player2</h3>
+    <ul style="display:flex" >
+        <li class="card">3♥</li>
+        <li class="card2">A♣</li>
+        <li class="card2">10♣</li>
+        <li class="card">K♦</li>
+        <li class="card2">8♠</li>
+        <li class="card">3♥</li>
+
+    </ul>
 
 
-    </div>
-</body>
+
+</div>
 
 <footer> <!-- Оформляем подвал сайта -->
     <div>
@@ -68,7 +97,5 @@
         </center>
     </div>
 </footer>
-
-
-
 </html>
+
