--- a/site-HTML-CSS/siteHTML.html
+++ b/site-HTML-CSS/siteHTML.html
@@ -7,11 +7,19 @@
 <header>
 	<nav id = 'menu1'>
 		<ul class='menu-main'>
-			<li> <a href='#' class='current'> главная </a></li>
+			<li> <a href='#' class='current'> главная </a>
+                <ul>
+                    <li> <a href="praktika1.html"> Практика 1</a></li>
+                    <li> <a href="Praktika2.html"> Практика 2</a></li>
+
+                </ul>
+
+
+            </li>
 			<li> <a href='#'> об авторе </a></li>
 			<li> <a href='#'> милота </a>
 				<ul>
-					<li> <a href='+%D0%BF%D1%83%D1%88%D0%B8%D1%81%D1%82%D1%8B%D0%B5&udm=2&fbs=AEQNm0DDgaHKHmgQPgdfMPlZgxGLktch0PpVIwMIGICNm1smYaTuM3mndJP7y9gaCgUqrTG0pwiYgjqdcxVig90A6Hoh5Xoj4P6fcw1RQKSSMIZkwTJMhttps://www.google.com/search?sca_esv=314d744163236d97&rlz=1C1GCEU_ruRU1145RU1145&sxsrf=ADLYWIL3l_DHPBPeAjOcoYNuoxOtzUoyDA:1737609775388&q=%D0%BA%D0%BE%D1%88%D0%BA%D0%B89cGCSkesEIvTOQn1pyBIv3vQ710FZlk0XBstARDDO_WdZlNeLVh7_ixXfNTw60bsNrLVdFv1MdFtttjWLvJBULSdrrzDpLSJPqwSVS51OHqb4SwXFuJAhSqmXSTVhQo-oDM&sa=X&ved=2ahUKEwj8ga7rjIuLAxViFhAIHYCmF7oQtKgLegQIHBAB&biw=1920&bih=953&dpr=1'> котики </a></li>
+					<li> <a href='=2ahUKEwj8ga7rjIuLAxViFhAIHYCmF7oQtKgLegQIHBAB&biw=1920&bih=953&dpr=1'> котики </a></li>
 					<li> <a href='#'> Хомячки </a></li>
 					<li> <a href='#'> собачки </a></li>
 					<li> <a href='#'> кролики </a></li>
@@ -36,8 +44,7 @@
             Практическая работа, направленная на изчение основных тегов html, изучение таблицы стилей и применение ее к исполняемому файлу данной разметки.
 
             </p>
-            <a href="praktika1.html">Практика 1</a><br>
-            <a href="praktika1.html">Практика 2</a>
+            <a href="praktika1.html">Практика 1</a>
 
         </div>
     </div>
